<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="315dp"
            android:layout_height="301dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:src="@drawable/icon"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="35dp"
            android:layout_below="@id/Logo"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#04F45C"/>



        <EditText
            android:id="@+id/edtTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/tai_khoan"
            android:inputType="text"
            android:textColor="#ffff"
            android:textColorHint="#d4d4d4"
            android:textSize="16sp" />



        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#d4d4d4"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/nhaplaimatkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/nhap_lai_mat_khau"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#d4d4d4"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDangKy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textColor="#ffff" />
            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="#ffff" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>